Implement MP4Writer.