@@ -94,7 +94,7 @@ public class DropFileTransferHandler extends TransferHandler {
                 @SuppressWarnings("unchecked")
                 List<File> list = (List<File>) t.getTransferData(DataFlavor.javaFileListFlavor);
                 if (!list.isEmpty()) {
-                    File file = list.getFirst();
+                    File file = list.get(0);
 
                     switch (fileSelectionMode) {
                         case JFileChooser.FILES_AND_DIRECTORIES:
