@@ -7,10 +7,7 @@ package org.monte.media.av;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
-import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Set;
 
 import static org.monte.media.av.FormatKeys.EncodingKey;
 import static org.monte.media.av.FormatKeys.MediaTypeKey;
@@ -26,6 +23,29 @@ public abstract class Registry {
     private static Registry instance;
 
     /**
+     * Gets the registry instance.
+     * <p>
+     * Will create and return a {@link DefaultRegistry} if no instance has been set.
+     *
+     * @return the instance
+     */
+    public static Registry getInstance() {
+        if (instance == null) {
+            instance = new DefaultRegistry();
+        }
+        return instance;
+    }
+
+    /**
+     * Sets the registry instance.
+     *
+     * @param instanceNullable a new instance or null
+     */
+    public void setInstance(Registry instanceNullable) {
+        instance = instanceNullable;
+    }
+
+    /**
      * Gets a codec which can transcode from the specified input format to the
      * specified output format.
      *
@@ -35,7 +55,7 @@ public abstract class Registry {
      */
     public final Codec getCodec(Format inputFormat, Format outputFormat) {
         List<Codec> codecs = getCodecs(inputFormat, outputFormat);
-        return codecs.isEmpty() ? null : codecs.getFirst();
+        return codecs.isEmpty() ? null : codecs.get(0);
     }
 
     /**
@@ -93,13 +113,6 @@ public abstract class Registry {
 
     public abstract Format getFileFormat(File file);
 
-    public List<Format> getFileFormats() {
-        Set<Format> formats = new LinkedHashSet<>();
-        formats.addAll(getReaderFormats());
-        formats.addAll(getWriterFormats());
-        return Collections.unmodifiableList(new ArrayList<>(formats));
-    }
-
     /**
      * Gets a reader for the specified file format and file.
      *
@@ -110,6 +123,13 @@ public abstract class Registry {
      */
     public abstract MovieReader getReader(Format fileFormat, File file) throws IOException;
 
+    /**
+     * Gets a reader for the specified file.
+     *
+     * @param file the desired file
+     * @return a reader
+     * @throws IOException if no reader could be found
+     */
     public MovieReader getReader(File file) throws IOException {
         Format format = getFileFormat(file);
         if (format == null) {
@@ -118,10 +138,49 @@ public abstract class Registry {
         return getReader(format, file);
     }
 
+    /**
+     * Gets all registered reader formats.
+     * @return the reader formats
+     */
     public abstract List<Format> getReaderFormats();
 
-    public abstract List<Format> getWriterFormats();
+    /**
+     * Gets all reader SPIs for the specified file.
+     *
+     * @param file       the desired file
+     * @return the reader SPIs
+     * @throws IOException if no reader could be found
+     */
+    public List<MovieReaderSpi> getReaderSpis(File file) throws IOException {
+        Format format = getFileFormat(file);
+        if (format == null) {
+            throw new IOException("Could not identify the file format of file " + file + ".");
+        }
+        return getReaderSpis(format);
+    }
 
+    /**
+     * Gets all reader SPIs for the specified file format.
+     *
+     * @param fileFormat the desired file format.
+     * @return the reader SPIs
+     * @throws IOException if no reader could be found
+     */
+    public abstract List<MovieReaderSpi> getReaderSpis(Format fileFormat) throws IOException;
+
+    /**
+     * Gets all reader SPIs.
+     *
+     * @return the reader SPIs
+     */
+    public abstract List<MovieReaderSpi> getReaderSpis();
+
+    /**
+     * Gets a writer for the specified file.
+     *
+     * @param file the desired file
+     * @return a writer or null
+     */
     public MovieWriter getWriter(File file) throws IOException {
         Format format = getFileFormat(file);
         return format == null ? null : getWriter(format, file);
@@ -135,6 +194,43 @@ public abstract class Registry {
      * @return a writer or null
      */
     public abstract MovieWriter getWriter(Format fileFormat, File file) throws IOException;
+
+    /**
+     * Gets all registered writer formats.
+     * @return the reader formats
+     */
+    public abstract List<Format> getWriterFormats();
+
+    /**
+     * Gets all reader SPIs for the specified file.
+     *
+     * @param file the desired file
+     * @return the reader SPIs
+     * @throws IOException if no reader could be found
+     */
+    public List<MovieWriterSpi> getWriterSpis(File file) throws IOException {
+        Format format = getFileFormat(file);
+        if (format == null) {
+            throw new IOException("Could not identify the file format of file " + file + ".");
+        }
+        return getWriterSpis(format);
+    }
+
+    /**
+     * Gets all writer SPIs.
+     *
+     * @return the writer SPIs
+     */
+    public abstract List<MovieWriterSpi> getWriterSpis();
+
+    /**
+     * Gets all writer SPIs for the specified file format.
+     *
+     * @param fileFormat the desired file format.
+     * @return the reader SPIs
+     * @throws IOException if no reader could be found
+     */
+    public abstract List<MovieWriterSpi> getWriterSpis(Format fileFormat) throws IOException;
 
     /**
      * Suggests output formats for the given input media format and specified
@@ -156,7 +252,7 @@ public abstract class Registry {
                 if (mf.matches(matchFormat)) {
                     if (inputMediaFormat.matchesWithout(mf, MimeTypeKey)) {
                         // add matching formats first
-                        formats.addFirst(mf.append(inputMediaFormat));
+                        formats.add(0, mf.append(inputMediaFormat));
                         matchingCount++;
                     } else if (inputMediaFormat.matchesWithout(mf, MimeTypeKey, EncodingKey)) {
                         // add formats which match everything but the encoding second
@@ -182,29 +278,6 @@ public abstract class Registry {
         }
 
         return formats;
-    }
-
-    /**
-     * Gets the registry instance.
-     * <p>
-     * Will create and return a {@link DefaultRegistry} if no instance has been set.
-     *
-     * @return the instance
-     */
-    public static Registry getInstance() {
-        if (instance == null) {
-            instance = new DefaultRegistry();
-        }
-        return instance;
-    }
-
-    /**
-     * Sets the registry instance.
-     *
-     * @param instanceNullable a new instance or null
-     */
-    public void setInstance(Registry instanceNullable) {
-        instance = instanceNullable;
     }
 
 }
